# Modified-NVIDIA-Linux-x86_64-460.67

./: .gitignore  70percent  84percent  90percent  CMakeLists.txt  README.md  allocator.cpp  app.cu  app_kernel.cuh  final-AB.sh  final-C.sh  final-D.sh  final-Erw.sh  final-Ewarp.sh  final-Gsize.sh  final-Gstride.sh  final-shepard.sh  fp16metrics-test  fp32metrics-test  gpu.cu  hash_function.cpp  hash_function.hpp  kernel_helpers.cuh  memory.cu  naive-evaluation-comp.sh  naive-evaluation.sh  perfect  profile_repeat.sh  profile_repeat_rn.sh  reverse_engineering.cpp  reverse_engineering.hpp  run-vs-eviction.sh  stress.cu  stressLinear.cu  stress_kernel.cuh  stress_kernel_page.cuh  stress_page.cu  stress_set.cu  stress_set_kernel.cuh  stress_thread.cu  (+8 more)
NVIDIA-Linux-x86_64-460.67/: .manifest  NVIDIA_Changelog  README.txt  libEGL.so.1.1.0  libGL.so.1.7.0  libGLESv1_CM.so.1.2.0  libGLESv2.so.2.1.0  libGLX.so.0  libGLdispatch.so.0  libOpenCL.so.1.0.0  libOpenGL.so.0  libnvidia-egl-wayland.so.1.1.5  makeself-help-script.sh  makeself.sh  mkprecompiled  nvidia  nvidia-application-profiles-460.67-key-documentation  nvidia-application-profiles-460.67-rc  nvidia-bug-report.sh  nvidia-cuda-mps-control  nvidia-cuda-mps-server  nvidia-debugdump  nvidia-hibernate.service  nvidia-installer  nvidia-modprobe  nvidia-ngx-updater  nvidia-persistenced  nvidia-persistenced-init.tar.bz2  nvidia-resume.service  nvidia-settings  nvidia-smi  nvidia-suspend.service  nvidia-xconfig  pkg-history.txt
NVIDIA-Linux-x86_64-460.67/32/: libOpenCL.so.1.0.0
NVIDIA-Linux-x86_64-460.67/html/: acknowledgements.html  commonproblems.html  configtwinview.html  faq.html  flippingubb.html  framelock.html  installdriver.html  installedcomponents.html  knownissues.html  profiles.html  selectdriver.html  supportedchips.html  xconfigoptions.html
NVIDIA-Linux-x86_64-460.67/kernel/: .nvidia-drm.ko.cmd  .nvidia-drm.mod.cmd  .nvidia-drm.mod.o.cmd  .nvidia-drm.o.cmd  .nvidia-modeset.ko.cmd  .nvidia-modeset.mod.cmd  .nvidia-modeset.mod.o.cmd  .nvidia-modeset.o.cmd  .nvidia-uvm.ko.cmd  .nvidia-uvm.mod.cmd  .nvidia-uvm.mod.o.cmd  .nvidia-uvm.o.cmd  .nvidia.ko.cmd  .nvidia.mod.cmd  .nvidia.mod.o.cmd  .nvidia.o.cmd  Module.symvers  modules.order  nvidia-drm.ko  nvidia-drm.mod  nvidia-drm.mod.c  nvidia-modeset.ko  nvidia-modeset.mod  nvidia-modeset.mod.c  nvidia-uvm.ko  nvidia-uvm.mod  nvidia-uvm.mod.c  nvidia.mod  nvidia.mod.c
NVIDIA-Linux-x86_64-460.67/supported-gpus/: supported-gpus.json
ResNet/: RN  build.sh  contig-order  contig-test  contig3  opt-swapped3  resnet_host.cu  test5  test6  warpInfo.py
ResNet/data/: bn1_var.txt  bn2a2a_var.txt  bn2a2b_var.txt  bn2a2c_mean.txt  bn2b2b_var.txt  bn2b2c_mean.txt  bn2b2c_var.txt  bn2c2a_var.txt  bn2c2b_mean.txt  bn2c2b_var.txt  bn2c2c_var.txt  bn3a2a_var.txt  bn3a2c_mean.txt  bn3a2c_var.txt  bn3ab1_var.txt  bn3b2b_mean.txt  bn3b2c_mean.txt  bn3c2a_mean.txt  bn3c2a_var.txt  bn3c2b_var.txt  bn3c2c_mean.txt  bn3c2c_var.txt  bn3d2a_var.txt  bn3d2b_var.txt  bn3d2c_mean.txt  bn4a2a_mean.txt  bn4a2a_var.txt  bn4a2c_mean.txt  bn4b2b_mean.txt  bn4b2b_var.txt  bn4b2c_mean.txt  bn4c2a_mean.txt  bn4c2a_var.txt  bn4d2b_var.txt  bn4d2c_mean.txt  bn4e2a_mean.txt  bn4e2a_var.txt  bn4e2b_mean.txt  bn4e2b_var.txt  bn4e2c_mean.txt  (+88 more)
eviction-victims/AlexNet/: AN  alexnet_host.cu  run_things.sh
eviction-victims/CifarNet/: CN  CN_cpp.cu  CN_cuda.cu  README  build.sh  profile_repeat.sh  run_things.sh
eviction-victims/GRU/: GRU  README  build.sh  gru_host.cu  gru_kernel.cu  run_things.sh
eviction-victims/HSOpticalFlow/: FlowCPU.flo  HSOpticalFlow  Makefile  NsightEclipse.xml  flowCUDA.cu  main.cpp
eviction-victims/LSTM/: LSTM  README  build.sh  lstm.cu  profile_repeat.sh  run_things.sh
eviction-victims/NV12toBGRandResize/: Makefile  NV12toBGRandResize  NsightEclipse.xml  resize_convert_main.cpp
eviction-victims/ResNet/: README  RN  contig2  contig4  free-wait-synch-trace.csv  free-wait-synch-trace2.csv  opt-swapped  opt-test  optimized-order  resnet_host.cu  rn_kernel.cu  run_things.sh  test.csv  test.profout  test1.csv  test2.profout  test3  test4
eviction-victims/SobelFilter/: Makefile  NsightEclipse.xml  SobelCopyImageReuse  SobelCopyImageSim  SobelCopyImageSortedReuse  SobelCopyImageVirtBase  SobelCopyImageWarpInfo  SobelFilter  SobelFilter.cpp  SobelFilter_kernels.cu  SobelSharedFmt  SobelSharedLineCounts  SobelSharedReuse  SobelSharedSim  SobelSharedSortedFmt  SobelSharedSortedReuse  SobelSharedVirtBase  SobelSharedWarpInfo  SobelTexL2Stat  SobelTexMemInfo  SobelTexReuse  SobelTexSim  SobelTexSortedReuse  SobelTexVirtBase  SobelTexWarpInfo  run_things.sh
eviction-victims/SqueezeNet/: SN  SN.cu  build.sh
eviction-victims/bilateralFilter/: Makefile  NsightEclipse.xml  bilateralFilter  bilateralFilter.cpp  bilateralFilterL2Stat  bilateralFilterLineCounts  bilateralFilterMemInfo  bilateralFilterReuse  bilateralFilterSim  nature_00.ppm  (+5 more)
results/: 16_16flush_contig  2_16flush_contig  2_1flush_contig  2_2flush_contig  2_4flush_contig  2_noflush_contig  4_16flush_contig  8_16flush_contig  8_1flush_contig  8_2flush_contig  8_4flush_contig  8_noflush_contig1  8_noflush_contig2  8_noflush_virt1  8_noflush_virt2
(+518 files in other folders)
